[package]
name = "repbridge"
version = "0.1.0"
description = "RepBridge - Cross-chain reputation bridge via Hyperlane"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "repbridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
